--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@ Error message and password prompt
 
 <li>איריס הבת</li>
 
+<li>איתן וג'ואל כהן</li>
+
 <li>אלה</li>
 
 <li>אלכסנדרה</li>
@@ -264,6 +266,8 @@ Error message and password prompt
 <li>בית האננס ההוואי של אירי</li>
 
 <li>ג'וזף אברואה</li>
+
+<li>ג'ון אירווינג</li>
 
 <li>ג'ונג</li>
 
@@ -8314,7 +8318,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פאי אגסים עם קרם גבינה ושקדים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחיות חוץ]] [[ג'ון אירווינג]] המעבדה [[עיגולי מרציפן]] [[פאי דובדבנים]] [[פאי אגסים עם קרם גבינה ושקדים]] [[כל המתכונים של ארוחת הכריסמס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8334,8 +8338,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170415140434171" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170415200610568" title="$:/temp/search">
+<pre>מאיר</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8555,19 +8559,19 @@ Error message and password prompt
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170415105721479" modified="20170415121321227" tags="[[אחיות חוץ]]" title="אחיות חוץ">
+<div created="20170415105721479" modified="20170415192441518" tags="[[אחיות חוץ]]" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
 
-כככה יויו ואני כתבנו [[אז|המעבדה]]:
+ככה יויו ואני כתבנו [[אז|המעבדה]]:
 
 [[האחיות כהן]] הינה קבוצה יצירתית, שעל פי הגדרתה את עצמה לא כל מי שחבר בה חייב לעסוק ביצירה לפרנסתו או באופן קבוע, אלא רואה את היצירתיות כחלק מחיי היומיום וכעניין הכרחי.
 כמו כן כל מי שמשתייכת לאחיות הינה אחות כהן גם אם מינה הוא זכר.
 
-האחיות החלו פעילותן  בעיתות מצוקה, את הדמויות כתבו בניסיון לרפא עצמן ממפגשים אנושיים מכאיבים, ולשמח את ליבן בכל דרך אפשרית אגב צפייה בשידורים חוזרים של אודטה, כאשר בבסיס יצירתן עומד המשפט של האחות הסופר ג'ון אירווינג: &quot;החיים רציניים אך האומנות היא תענוג&quot;
+האחיות החלו פעילותן  בעיתות מצוקה, את הדמויות כתבו בניסיון לרפא עצמן ממפגשים אנושיים מכאיבים, ולשמח את ליבן בכל דרך אפשרית אגב צפייה בשידורים חוזרים של אודטה, כאשר בבסיס יצירתן עומד המשפט של האחות הסופר [[ג'ון אירווינג]]: &quot;החיים רציניים אך האומנות היא תענוג&quot;
 
-שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים איתן ויואל כהן – שכותבים ואף מביימים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה – כושיות עיוורות בצבעי כחול ולבן. 
+שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים [[איתן וג'ואל כהן]] – שכותבים ואף מביימים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה – כושיות עיוורות בצבעי כחול ולבן. 
 
 זוהי קבוצה הולכת ומתרחבת של אנשים,שהוקמה כסוג של בדיחה וממשיכה להתקיים ברצינות תהומית, בהומור  ובענווה – בחדרים בקיבוצים, בדירות עירוניות, בבתי ההורים ואף מעבר ל[[ים טתיס]].
 
@@ -8627,6 +8631,19 @@ Error message and password prompt
 !!![[גורה]]:
 
 איריס בתה של אווה, היא ילדה זרחנית. זורחת באור ובחושך.</pre>
+</div>
+<div created="20170415200315789" modified="20170415201819170" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
+<pre>
+
+[img[pictures/cohen-brothers.jpg]]
+
+!!![[גורה]]:
+
+  [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך לאחותם - אווה כהן, שהיא קונדיטורית הונגריה.
+
+
+
+</pre>
 </div>
 <div created="20161115182456203" modified="20170401163845219" title="אלה">
 <pre>[img[pictures/BaIAkKdSidrY1gLE.jpg]]
@@ -8807,6 +8824,13 @@ Error message and password prompt
 ג'וזף אברואה הוא גבר יפה, גבוה וחכם. הוא בן 60, רוב חייו כתב מאמרי דעה בעיתונים בספרד. הוא שמאלן, הוא טוב לב, הוא סופר נחמד, והוא אבא של [[אלפרד]] ובן זוגה של [[ז'נבייב]].
 
 כשאלפרד ואני היינו יחד, ונסענו ליער ונפצעתי, ג'וזף דאג לי ולהכל לאורך כל הדרך, ומאז כולנו חיים באושר ועושר.</pre>
+</div>
+<div created="20170415192146343" modified="20170415211821595" tags="[[אחיות חוץ]]" title="ג'ון אירווינג">
+<pre>
+
+[[ג'ון אירווינג|https://he.wikipedia.org/wiki/%D7%92%27%D7%95%D7%9F_%D7%90%D7%99%D7%A8%D7%95%D7%95%D7%99%D7%A0%D7%92]]
+
+</pre>
 </div>
 <div created="20170323221312884" modified="20170323221339403" title="ג'ונג">
 <pre>[img[pictures/5LOlLNHYCapNfBhO.jpg]]
@@ -9244,7 +9268,7 @@ Error message and password prompt
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170415121335044" title="המעבדה">
+<div created="20161113192814802" modified="20170415192359817" title="המעבדה">
 <pre>[img[pictures/t2az8aqECTTa8imN.JPG]]
 
 !!![[כאן היינו]]
@@ -9260,9 +9284,9 @@ Error message and password prompt
 [[האחיות כהן]] הינה קבוצה יצירתית, שעל פי הגדרתה את עצמה לא כל מי שחבר בה חייב לעסוק ביצירה לפרנסתו או באופן קבוע, אלא רואה את היצירתיות כחלק מחיי היומיום וכעניין הכרחי.
 כמו כן כל מי שמשתייכת לאחיות הינה אחות כהן גם אם מינה הוא זכר.
 
-האחיות החלו פעילותן  בעיתות מצוקה, את הדמויות כתבו בניסיון לרפא עצמן ממפגשים אנושיים מכאיבים, ולשמח את ליבן בכל דרך אפשרית אגב צפייה בשידורים חוזרים של אודטה, כאשר בבסיס יצירתן עומד המשפט של האחות הסופר ג'ון אירווינג: &quot;החיים רציניים אך האומנות היא תענוג&quot;.
+האחיות החלו פעילותן  בעיתות מצוקה, את הדמויות כתבו בניסיון לרפא עצמן ממפגשים אנושיים מכאיבים, ולשמח את ליבן בכל דרך אפשרית אגב צפייה בשידורים חוזרים של אודטה, כאשר בבסיס יצירתן עומד המשפט של האחות הסופר [[ג'ון אירווינג]]: &quot;החיים רציניים אך האומנות היא תענוג&quot;.
 
-שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים איתן ויואל כהן – שכותבים ואף מביימים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה – כושיות עיוורות בצבעי כחול ולבן. 
+שמה ניתן לה מתוך רכישת כבוד ואהבה  לאחים היוצרים [[איתן וג'ואל כהן]] – שכותבים ואף מביימים את סרטיהם. היא נוסדה על ידי נשים בנות דת משה – כושיות עיוורות בצבעי כחול ולבן. 
 
 זוהי קבוצה הולכת ומתרחבת של אנשים,שהוקמה כסוג של בדיחה וממשיכה להתקיים ברצינות תהומית, בהומור  ובענווה – בחדרים בקיבוצים, בדירות עירוניות, בבתי ההורים ואף מעבר ל[[ים טתיס]].
 
@@ -9987,7 +10011,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170328175210280" modified="20170401162217395" title="מאיר אריאל">
+<div created="20170328175210280" modified="20170415200651468" tags="[[אחיות חוץ]]" title="מאיר אריאל">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
 לוקח לי אחר הצהריים חיובי נוסע לנמל
@@ -11064,7 +11088,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170415150652294" modified="20170415191236114" title="פאי אגסים עם קרם גבינה ושקדים">
+<div created="20170415150652294" modified="20170415191348362" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי אגסים עם קרם גבינה ושקדים">
 <pre>[img[pictures/pie-agasim.jpg]]
 
 !!![[אווה]]:
