--- a/index.html
+++ b/index.html
@@ -8318,7 +8318,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחיות חוץ]] [[ג'ון אירווינג]] המעבדה [[עיגולי מרציפן]] [[פאי דובדבנים]] [[פאי אגסים עם קרם גבינה ושקדים]] [[כל המתכונים של ארוחת הכריסמס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8338,8 +8338,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170415200610568" title="$:/temp/search">
-<pre>מאיר</pre>
+<div created="20161023184814872" modified="20170416140535499" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8634,7 +8634,6 @@ Error message and password prompt
 </div>
 <div created="20170415200315789" modified="20170415201819170" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
 <pre>
-
 [img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
@@ -8827,7 +8826,6 @@ Error message and password prompt
 </div>
 <div created="20170415192146343" modified="20170415211821595" tags="[[אחיות חוץ]]" title="ג'ון אירווינג">
 <pre>
-
 [[ג'ון אירווינג|https://he.wikipedia.org/wiki/%D7%92%27%D7%95%D7%9F_%D7%90%D7%99%D7%A8%D7%95%D7%95%D7%99%D7%A0%D7%92]]
 
 </pre>
