גון אירווינג ועיגולי מרציפן

--- a/index.html
+++ b/index.html
@@ -8318,7 +8318,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עיגולי מרציפן]] [[ארוחת כריסמס]] [[ג'ון אירווינג]] [[אחיות חוץ]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8338,7 +8338,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170416140535499" title="$:/temp/search">
+<div created="20161023184814872" modified="20170416202654904" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8633,8 +8633,7 @@ Error message and password prompt
 איריס בתה של אווה, היא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
 <div created="20170415200315789" modified="20170415201819170" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
-<pre>
-[img[pictures/cohen-brothers.jpg]]
+<pre>[img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
 
@@ -8753,7 +8752,7 @@ Error message and password prompt
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20161112191527440" modified="20170401162621300" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20170416202626305" title="ארוחת כריסמס">
 <pre>[img[pictures/zVz8rufF4aR5GlBM.jpg]]
 
 
@@ -8770,7 +8769,7 @@ Error message and password prompt
 
 רשמקול בפיתה, אך מה זה משנה.
 
-החל משלב מסויים בחיי (נכון יותר לומר - מאז שקראתי את [[עד שאמצא אותך|https://en.wikipedia.org/wiki/Until_I_Find_You]] של [[ג'ון אירווינג|https://en.wikipedia.org/wiki/John_Irving]], התחלתי לראות את הדברים דרך המשפט:
+החל משלב מסויים בחיי (נכון יותר לומר - מאז שקראתי את [[עד שאמצא אותך|https://en.wikipedia.org/wiki/Until_I_Find_You]] של [[ג'ון אירווינג]], התחלתי לראות את הדברים דרך המשפט:
 
 ''התבונה הגיע לקצה יכולתה ורק האמונה נותרה בעינה.''
 
@@ -8824,9 +8823,18 @@ Error message and password prompt
 
 כשאלפרד ואני היינו יחד, ונסענו ליער ונפצעתי, ג'וזף דאג לי ולהכל לאורך כל הדרך, ומאז כולנו חיים באושר ועושר.</pre>
 </div>
-<div created="20170415192146343" modified="20170415211821595" tags="[[אחיות חוץ]]" title="ג'ון אירווינג">
+<div created="20170415192146343" modified="20170416203232685" tags="[[אחיות חוץ]]" title="ג'ון אירווינג">
 <pre>
-[[ג'ון אירווינג|https://he.wikipedia.org/wiki/%D7%92%27%D7%95%D7%9F_%D7%90%D7%99%D7%A8%D7%95%D7%95%D7%99%D7%A0%D7%92]]
+[img[pictures/john-irving.jpg]]
+
+!!![[גורה]]:
+
+
+[[ג'ון אירווינג|https://he.wikipedia.org/wiki/%D7%92%27%D7%95%D7%9F_%D7%90%D7%99%D7%A8%D7%95%D7%95%D7%99%D7%A0%D7%92]] הוא סופר הנשמה של יויו, והוא עומד בשורה אחת [[כאחות חוץ|אחיות חוץ]], עם [[האחים כהן|איתן וג'ואל כהן]], כאחות בסיס.
+
+
+
+
 
 </pre>
 </div>
@@ -10975,7 +10983,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170414012036863" modified="20170415140415970" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
+<div created="20170414012036863" modified="20170416212345661" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
 
 
@@ -10986,19 +10994,27 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 *שני שלישים  כוס אבקת סוכר
 
-* 4-6כפיות מיץ לימון לפי הטעם
+* 3-6 כפות מיץ לימון סחוט לפי הטעם
 
 * כף ליקר שקדים (אמרטו)
 
 * גרד קליפת לימון שלם
 
+תוספות שאני הייתי שמה:
+
+חמוציות, צימוקים, גרד קליפת תפוז, אגוזי קשיו, גרעיני דלעת, קינמון, חוואייג' של קפה, סוכר חום
+
+התוספות ששמתי בעיגולי המרציפן שהכנתי [[לארוחת הכריסמס|ארוחת כריסמס]]:
+
+עוד אמרטו, תערובת של סוכר חום-חוואייג'-קינמון, חמוציות
+
  
 אופן ההכנה:
 
-* טוחנים את השקדים במעבד מזון עד לקבלת אבקת שקדים או שקדים טחונים דק מאוד.
-* מוסיפים את יאבקת הסוכר, מיץ הלימון ומי הורדים ומעבדים עד לקבלת קרם חלק. טועמים ואם צריך מוסיפים מה שצריך
-* לשים לתוך בצק המרציפן שנוצר את גרד קליפת הלימון
- * יוצרים כדורים ומאחסנים במקרר, בקופסה סגורה היטב. </pre>
+* מבשלים את אבקת הסוכר עם כוס כוס מים על להבה גבוהה כמה דקות, עד שנוצר סירופ מעט סמיך
+* טוחנים את השקדים במעבד מזון עד לקבלת אבקת שקדים או שקדים טחונים דק מאוד 
+*מוסיפים לתוך השקדים הטחונים שלוש כפות סירופ ומפעילים שוב את מעבד המזון. בודקים את המרציפן, וממשיכים להוסיף כל פעם כף אחת, עד שנוצר כדור בצק אחיד, רך וקל לעיבוד
+ * מכאן כל שנותר הוא ליצור מהבצק את הצורות הרצויות. אני נוהגת לגלול את המרציפן לגלילים קטנים ודקים, ולפרוס אותם לעיגולים.</pre>
 </div>
 <div created="20170411211723019" modified="20170411212817850" title="עיר בנויה מרחובות">
 <pre>[img[pictures/ir-bnooya.jpg]]
