--- a/index.html
+++ b/index.html
@@ -8318,7 +8318,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עיגולי מרציפן]] [[ארוחת כריסמס]] [[ג'ון אירווינג]] [[אחיות חוץ]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עיגולי מרציפן]] [[מאיר אריאל]] [[דיוויד בואי]] [[אחיות חוץ]] [[ג'ון אירווינג]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8338,8 +8338,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170416202654904" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170416220918265" title="$:/temp/search">
+<pre>מאיר</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8559,7 +8559,7 @@ Error message and password prompt
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170415105721479" modified="20170415192441518" tags="[[אחיות חוץ]]" title="אחיות חוץ">
+<div created="20170415105721479" modified="20170416220852582" tags="[[אחיות חוץ]]" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
@@ -8577,7 +8577,13 @@ Error message and password prompt
 
 האחיות בוחרות לעצמן אחים ללא מורא ואף ללא ידיעתם. 
 כבר בטקסט הכתוב לעיל אפשר לראות איך בחרו לעצמן את האח אירווינג ואת האחים הבימאים איתן וג'ואל, וכמותן יש עוד רבים (מצוינים ומשובחים), שיצוינו בהמשך, וכן ילכו ויתווספו . 
-</pre>
+
+חיאות חוץ שבגנזך:
+
+*[[איתן וג'ואל כהן]] 
+* [[ג'ון אירווינג]]
+* [[ דיוויד בואי]]
+* [[מאיר אריאל]]</pre>
 </div>
 <div created="20170301155222124" modified="20170301155811140" title="אימא, סבתא ואני">
 <pre>[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
@@ -8823,14 +8829,13 @@ Error message and password prompt
 
 כשאלפרד ואני היינו יחד, ונסענו ליער ונפצעתי, ג'וזף דאג לי ולהכל לאורך כל הדרך, ומאז כולנו חיים באושר ועושר.</pre>
 </div>
-<div created="20170415192146343" modified="20170416203232685" tags="[[אחיות חוץ]]" title="ג'ון אירווינג">
-<pre>
-[img[pictures/john-irving.jpg]]
+<div created="20170415192146343" modified="20170416220602068" tags="[[אחיות חוץ]]" title="ג'ון אירווינג">
+<pre>[img[pictures/john-irving.jpg]]
 
 !!![[גורה]]:
 
 
-[[ג'ון אירווינג|https://he.wikipedia.org/wiki/%D7%92%27%D7%95%D7%9F_%D7%90%D7%99%D7%A8%D7%95%D7%95%D7%99%D7%A0%D7%92]] הוא סופר הנשמה של יויו, והוא עומד בשורה אחת [[כאחות חוץ|אחיות חוץ]], עם [[האחים כהן|איתן וג'ואל כהן]], כאחות בסיס.
+[[ג'ון אירווינג|https://he.wikipedia.org/wiki/%D7%92%27%D7%95%D7%9F_%D7%90%D7%99%D7%A8%D7%95%D7%95%D7%99%D7%A0%D7%92]] הוא סופר הנשמה של יויו, והוא עומד בשורה אחת [[כאחות חוץ|אחיות חוץ]], עם [[האחים כהן|איתן וג'ואל כהן]], 
 
 
 
@@ -8977,7 +8982,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105154405192" modified="20170328190739523" title="דיוויד בואי">
+<div created="20170105154405192" modified="20170416220914242" tags="[[אחיות חוץ]]" title="דיוויד בואי">
 <pre>[img[pictures/4ysMCHnnsnnNyQ96.jpg]]
 
 !!![[אירי]]:
@@ -10017,7 +10022,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170328175210280" modified="20170415200651468" tags="[[אחיות חוץ]]" title="מאיר אריאל">
+<div created="20170328175210280" modified="20170416220935035" tags="[[אחיות חוץ]]" title="מאיר אריאל">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
 לוקח לי אחר הצהריים חיובי נוסע לנמל
@@ -10983,14 +10988,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170414012036863" modified="20170416212345661" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
+<div created="20170414012036863" modified="20170416221016497" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
 
 
  
 המרכיבים:
 
-* שלוש כוסות שקדים שקדים מולבנים
+* שלוש כוסות  שקדים מולבנים
 
 *שני שלישים  כוס אבקת סוכר
 
