--- a/index.html
+++ b/index.html
@@ -477,6 +477,8 @@ Error message and password prompt
 
 <li>ריחות</li>
 
+<li>רן יגיל</li>
+
 <li>שאלון האחיות</li>
 
 <li>שָה נוּאָר</li>
@@ -8318,7 +8320,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עיגולי מרציפן]] [[מאיר אריאל]] [[דיוויד בואי]] [[אחיות חוץ]] [[ג'ון אירווינג]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחיות חוץ]] [[רן יגיל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8338,8 +8340,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170416220918265" title="$:/temp/search">
-<pre>מאיר</pre>
+<div created="20161023184814872" modified="20170416222332234" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8559,7 +8561,7 @@ Error message and password prompt
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170415105721479" modified="20170416220852582" tags="[[אחיות חוץ]]" title="אחיות חוץ">
+<div created="20170415105721479" modified="20170416222425812" tags="[[אחיות חוץ]]" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
@@ -8583,7 +8585,8 @@ Error message and password prompt
 *[[איתן וג'ואל כהן]] 
 * [[ג'ון אירווינג]]
 * [[ דיוויד בואי]]
-* [[מאיר אריאל]]</pre>
+* [[מאיר אריאל]]
+* [[רן יגיל]]</pre>
 </div>
 <div created="20170301155222124" modified="20170301155811140" title="אימא, סבתא ואני">
 <pre>[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
@@ -11740,6 +11743,12 @@ Fapina''
 
 
 </pre>
+</div>
+<div created="20170416222531534" modified="20170416222606883" tags="[[אחיות חוץ]]" title="רן יגיל">
+<pre>
+
+
+[[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]]</pre>
 </div>
 <div created="20161213210419446" modified="20170415105651373" title="שאלון האחיות">
 <pre>[img[pictures/sheelon-haachayot.jpg]]
