--- a/index.html
+++ b/index.html
@@ -8320,7 +8320,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחיות חוץ]] [[רן יגיל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עיגולי מרציפן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10991,7 +10991,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170414012036863" modified="20170416221016497" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
+<div created="20170414012036863" modified="20170416223105137" tags="[[מתכוני ארוחת הכריסמס]]" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
 
 
@@ -11022,7 +11022,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מבשלים את אבקת הסוכר עם כוס כוס מים על להבה גבוהה כמה דקות, עד שנוצר סירופ מעט סמיך
 * טוחנים את השקדים במעבד מזון עד לקבלת אבקת שקדים או שקדים טחונים דק מאוד 
 *מוסיפים לתוך השקדים הטחונים שלוש כפות סירופ ומפעילים שוב את מעבד המזון. בודקים את המרציפן, וממשיכים להוסיף כל פעם כף אחת, עד שנוצר כדור בצק אחיד, רך וקל לעיבוד
- * מכאן כל שנותר הוא ליצור מהבצק את הצורות הרצויות. אני נוהגת לגלול את המרציפן לגלילים קטנים ודקים, ולפרוס אותם לעיגולים.</pre>
+ * מכאן כל שנותר הוא ליצור מהבצק את הצורות הרצויות. בזמן האחרון אני גוללת את המרציפן לגלילים קצרים ודקים, ופורסת אותם לעיגולים.</pre>
 </div>
 <div created="20170411211723019" modified="20170411212817850" title="עיר בנויה מרחובות">
 <pre>[img[pictures/ir-bnooya.jpg]]
@@ -11746,7 +11746,6 @@ Fapina''
 </div>
 <div created="20170416222531534" modified="20170416222606883" tags="[[אחיות חוץ]]" title="רן יגיל">
 <pre>
-
 
 [[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]]</pre>
 </div>
