הקליניקה, אלפרד, הקוסקוס

--- a/index.html
+++ b/index.html
@@ -8322,7 +8322,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דןדן נסע]] דןדן הדירה [[האחיות כהן]]" title="$:/StoryList">
+<div list="הקליניקה" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8342,8 +8342,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170417222519791" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170418175656237" title="$:/temp/search">
+<pre>הקליניקה</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8597,7 +8597,7 @@ Error message and password prompt
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20161206200127567" modified="20170417190413999" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20170418160606847" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -8610,12 +8610,13 @@ Error message and password prompt
 
 אני מבקש ממנה והיא מתקשרת למורה שלה לאלכסנדר וקובעת לי שיעור ראשון.
 
-ובכדי שתבינו עוד, אני ממליץ כאן על שני דברים:
+ובכדי שתבינו עוד, אני ממליץ כאן על שלושה דברים:
 
 1. [[הרקוויאם של פורה]], תוך כדי קריאת מה שאירי כתבה.
 
 2. [[הסיפור שגורה כתבה על אירי, ושנמצא ב&quot;אגב בתוך אגב&quot;|מחפשת את אירי]].
 
+3. [[דיוויד בואי]].
 
 
 
@@ -9346,8 +9347,8 @@ loving you</pre>
 ([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
 @@</pre>
 </div>
-<div created="20161218221618167" modified="20161218224602747" title="המשק האוטרקי שלנו">
-<pre>[img[pictures/uxiF1qYtqyOWb2ZJ.JPG]]
+<div created="20161218221618167" modified="20170418175614763" title="המשק האוטרקי שלנו">
+<pre>[img[pictures/hameshek-shelanoo.jpg]]
 
 !!![[אלפרד]]:
 
@@ -9700,8 +9701,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אנה, שמספרתה נמצאת בקומה הראשונה של [[געזונטהייטס]], והיא אישה נשואה (מאוד) הרבה שנים. היא אמא. היא מתקנת הכל, היא תחמנית, היא נשית, היא האישה האולטימטיבית, ומי שהכי מזכירה אותה היא ז'נבייב. ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20161213170938039" modified="20170226173942361" title="הקוסקוס">
-<pre>[img[pictures/qap8auzs2eWMWG1l.jpg]]
+<div created="20161213170938039" modified="20170418160118585" title="הקוסקוס">
+<pre>[img[pictures/hacouscous.jpg]]
 
 !!![[אלפרד]]:
 
@@ -9710,12 +9711,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 כשהיא נכנסה למסעדה, לפני כמה שנים, חברים שלה המליצו לה על חבורה של [[חמישה סינים|הסינים]] צעירים לשיפוץ.
 
-נכון לעכשיו עובדים שם: סוניה, יויו, דןדן, אירי ודניאל, אך גורה היא זו שדרכה הכרנו כולנו את ז'נבייב.
+נכון לעכשיו עובדים שם: [[סוניה]], [[יויו]], [[דןדן]], [[אירי]] [[ודניאל|דניאל]], אך [[גורה]] היא זו שדרכה הכרנו כולנו את [[ז'נבייב]].
 גם אותי גורה לקחה לאכול שם בתקופה שהיינו יחד.
 
 הקוסקוס הוא מסוג המקומות, שלאחר שאתה מסיים לאכול בהם, אתה רווי נחת, ומלקק את השפתיים משך כל היום ונזכר בטעם הטעים.
 
-בתקופה הלא ארוכה במיוחד בה [[כולנו מכירים את כולנו|האחיות כהן]], ז'נבייב ואבי הפכו לזוג אוהבים, כך ש[[במשק האוטרקי שלנו|המשק האוטרקי שלנו]], לא רק שיש לנו גם מסעדה, יש לי אימא חורגת מהסוג שאין באגדות.
+בתקופה הלא ארוכה במיוחד בה [[כולנו מכירים את כולנו|האחיות כהן]], ז'נבייב [[ואבי|ג'וזף אברואה]] הפכו לזוג אוהבים, כך ש[[במשק האוטרקי שלנו|המשק האוטרקי שלנו]], לא רק שיש לנו גם מסעדה, יש לי אימא חורגת מהסוג שאין באגדות.
 
 
 
@@ -9727,8 +9728,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161112230916972" modified="20161114015846052" title="הקליניקה">
-<pre>[img[pictures/65H8RajKEVeOgWur.JPG]]
+<div created="20161112230916972" modified="20170418182025883" title="הקליניקה">
+<pre>[img[pictures/haklinika.JPG]]
 
 !!![[אירי]]:
 
@@ -10105,13 +10106,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא והספרית הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
-<div created="20170406164152446" modified="20170415112708243" title="מחפשת את אירי">
+<div created="20170406164152446" modified="20170418160335679" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
 !!![[גורה]]:
 
-את הסיפור הזה כתבתי לאחר שחזרנו עם אירי מהודו, וערך אותו [[רני|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]], שהוא [[אחות חוץ|אחיות חוץ]] יקרה.
+את הסיפור הזה כתבתי לאחר שחזרנו עם אירי מהודו, וערך אותו [[רני|רן יגיל]], שהוא [[אחות חוץ|אחיות חוץ]] יקרה.
 
 מחפשת את אירי
 
