--- a/index.html
+++ b/index.html
@@ -8322,7 +8322,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הקליניקה" title="$:/StoryList">
+<div list="צ'נג פה צ'ן ג'ונג הקליניקה" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
