--- a/index.html
+++ b/index.html
@@ -8322,7 +8322,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="הקליניקה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9728,8 +9728,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161112230916972" modified="20170418182025883" title="הקליניקה">
-<pre>[img[pictures/haklinika.JPG]]
+<div created="20161112230916972" modified="20170418184725850" title="הקליניקה">
+<pre>[img[pictures/haklinika.jpg]]
 
 !!![[אירי]]:
 
