--- a/index.html
+++ b/index.html
@@ -8322,7 +8322,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הקליניקה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[המשק האוטרקי שלנו]] הקליניקה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8342,7 +8342,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170418184008466" title="$:/temp/search">
+<div created="20161023184814872" modified="20170418222438934" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8897,8 +8897,8 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20170324124358125" title="גלות">
-<pre>[img[pictures/fFaOMg4QGdKACzmA.jpg]]
+<div created="20170105170620001" modified="20170418221456442" title="גלות">
+<pre>[img[pictures/galoot.jpg]]
 
 
 !!![[אירי]]:
@@ -9728,7 +9728,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161112230916972" modified="20170418184725850" title="הקליניקה">
+<div created="20161112230916972" modified="20170418184905359" title="הקליניקה">
 <pre>[img[pictures/haklinika.jpg]]
 
 !!![[אירי]]:
